--- a/docs/assets/css/tailwind.css
+++ b/docs/assets/css/tailwind.css
@@ -1129,6 +1129,9 @@ select {
 .max-w-screen-2xl {
   max-width: 1536px;
 }
+.max-w-\[100vw\] {
+  max-width: 100vw;
+}
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1161,6 +1164,9 @@ select {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.overflow-x-auto {
+  overflow-x: auto;
 }
 .overflow-y-auto {
   overflow-y: auto;
@@ -1512,10 +1518,13 @@ code {
   padding: 0.25rem;
 }
 pre {
-  max-width: 100%;
-  overflow-x: scroll !important;
-  white-space: pre-wrap;
-  overflow-wrap: break-word;
+  max-width: calc(100vw - 3rem);
+}
+.prose :where(code):not(:where([class~="not-prose"] *))::before {
+    content: normal;
+}
+.prose :where(code):not(:where([class~="not-prose"] *))::after {
+    content: normal;
 }
 .task-list {
   list-style-type: none;
@@ -1664,13 +1673,22 @@ pre {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .lg\:p-0 {
-    padding: 0px;
-  }
-
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:pr-2 {
+    padding-right: 0.5rem;
+  }
+
+  .lg\:pl-0 {
+    padding-left: 0px;
   }
 
   .lg\:pt-8 {
